fix: last p spacing in editor

--- a/apps/web/src/styles.css
+++ b/apps/web/src/styles.css
@@ -98,8 +98,8 @@
 
   .ProseMirror {
     p {
-      margin-bottom: calc(var(--spacing) * 4);
       word-break: break-word;
+      @apply not-last:mb-4;
     }
 
     & a,
